--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>    <html lang="hi">    
 <head>    
 <meta charset="UTF-8">    
+<link rel="manifest" href="manifest.json">
 <title>Mandi App Final</title>    
 <meta name="viewport" content="width=device-width, initial-scale=1">    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>    <style>    
 body{font-family:Arial;padding:12px;background:#eef0f4;}    
@@ -463,7 +464,16 @@ function filterData(){
     loadSeason();
 }
     
-/******** INIT *********/    
-loadSeasons();    
-</script>    </body>    
+/******** INIT *********/
+loadSeasons();
+
+</script>
+
+<!-- ⭐ SERVICE WORKER REGISTER ⭐ -->
+<script>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('service-worker.js');
+}
+</script>
+</body>    
 </html>
